--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "js-cookie": "^3.0.5",
     "negotiator": "^0.6.3",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-quill": "^2.0.0",
