--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-quill": "^2.0.0",
+    "react-select": "^5.8.0",
+    "react-use-keypress": "^1.3.1",
     "rehype-parse": "^9.0.0",
     "rehype-remark": "^10.0.0",
     "remark": "^15.0.1",
