--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "js-cookie": "^3.0.5",
     "negotiator": "^0.6.3",
     "next-mdx-remote": "^4.4.1",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-cookie": "^7.1.0",
     "react-day-picker": "^8.10.0",
@@ -67,6 +68,7 @@
     "rehype-parse": "^9.0.0",
     "rehype-remark": "^10.0.0",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-stringify": "^11.0.0",
     "swr": "^2.2.4",
