--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.3.1",
+    "framer-motion": "^11.1.7",
     "js-cookie": "^3.0.5",
     "negotiator": "^0.6.3",
     "next-mdx-remote": "^4.4.1",
