--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-cookie": "^7.1.0",
+    "react-cookie-consent": "^9.0.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
