--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@next/mdx": "^14.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -57,6 +58,7 @@
     "date-fns": "^3.3.1",
     "framer-motion": "^11.1.7",
     "js-cookie": "^3.0.5",
+    "lodash.debounce": "^4.0.8",
     "negotiator": "^0.6.3",
     "next-mdx-remote": "^4.4.1",
     "nextjs-toploader": "^1.6.12",
@@ -67,6 +69,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-phone-number-input": "^3.4.5",
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
     "react-use-keypress": "^1.3.1",
