--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ CLIENT_URL=undefined
 X_API_KEY=c38e444a-3c43-4053-b55d-997ec83c9898
 X_API_KEY_NAME=test key
 REMOTE_URL=http://localhost:5000
+NEXT_PUBLIC_CLIENT_URL=http://localhost:3000
