--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/validator": "^13.12.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "github-markdown-css": "^5.5.1",
@@ -84,6 +85,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "validator": "^13.12.0",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
   }
