push for deployment

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NEXT_PUBLIC_NODE_ENV=development
 SERVER_URL=undefined
 CLIENT_URL=undefined
 X_API_KEY=c38e444a-3c43-4053-b55d-997ec83c9898
