--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "remark-html": "^16.0.1",
     "remark-stringify": "^11.0.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.5",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
