fix bugs and add api key and name to env

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_NODE_ENV=production
 NEXT_PUBLIC_SERVER_URL=https://restoreplus.store
 NEXT_PUBLIC_REMOTE_URL=https://data.restoreplus.store
+X_API_KEY=0746c90a-3dd4-47fa-a9bb-2a4ab2ad1bff
+X_API_KEY_NAME=api-key
