--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_NODE_ENV=development
 SERVER_URL=undefined
 CLIENT_URL=undefined
-X_API_KEY=c38e444a-3c43-4053-b55d-997ec83c9898
-X_API_KEY_NAME=test key
+X_API_KEY=0746c90a-3dd4-47fa-a9bb-2a4ab2ad1bff
+X_API_KEY_NAME=api-key
 REMOTE_URL=http://localhost:5000
 NEXT_PUBLIC_CLIENT_URL=http://localhost:3000
