start adding localized content

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ REMOTE_URL=http://localhost:5000
 NEXT_PUBLIC_CLIENT_URL=http://localhost:3000
 API_KEY=AIzaSyDiyg3lfp_8AFnhS5p09-7_cdYHEkxBM-U
 PROJECT_ID=calm-vine-433200-u9
+REMOTE_X_API_KEY=8e9edfd5-e210-44d5-84d4-4d25134311a4
+REMOTE_X_API_KEY_NAME=api-key
