--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "remark-stringify": "^11.0.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.5",
+    "slugify": "^1.6.6",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
