--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.3.1",
+    "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.1.7",
     "js-beautify": "^1.15.1",
     "js-cookie": "^3.0.5",
@@ -88,6 +89,7 @@
     "server-only": "^0.0.1",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
+    "swiper": "^11.1.14",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
