--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.3.1",
+    "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.1.7",
     "js-beautify": "^1.15.1",
