update:workspace config with frozen dependency

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,6 @@ jobs:
             nvm use 18
             cd /var/www/restoreplus-client
             git pull origin main
-            pnpm install
+            pnpm install --frozen-lockfile
             pnpm build
             pm2 restart restoreplus-client
